<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_ignition" Id="{fccba042-2740-4520-a835-429245ec8ccc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fTableHeight : REAL;
	fColumnHeight : REAL;
	fClampHeight : REAL;
	fWidthDistance : REAL;
	fRotationDistance : REAL;
	
	
	//Client Handling 
	aIgnitionClients : ARRAY[0..10] OF ST_ignitionClient;
	nNumClients : INT;
	sMachineHMISessionID : STRING(64);
	bControlAssigned : BOOL := FALSE;
	sReqID : STRING;
	sRole : STRING;
	SRemoveID : STRING;
	bClientAddError : BOOL;
	
	//Client Control Request
	sOwnerSessionID 	: STRING(64); // Current controller
	sPendingSessionID	: STRING(64); // Session requesting 
	sRequestedMode		: STRING; //Mode requested to change to
	bTransferRequested 	: BOOL;
	bTransferApproved 	: BOOL;
	bTransferComplete 	: BOOL;
	
	sDenyReason		: STRING(64);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>